--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>ramo.klevis.Run</mainClass>
+                    <mainClass>ramo.klevis.TinyYoloPrediction</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -156,7 +156,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ramo.klevis.Run</mainClass>
+                            <mainClass>ramo.klevis.TinyYoloPrediction</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
