adding logs and use 1.0.0-alpha instead 0.9.2-SNAPSHOT  for native platform. More https://github.com/deeplearning4j/nd4j/issues/2847#issuecomment-383023894

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
-            <version>${deeplearning4j}</version>
+            <version>1.0.0-alpha</version>
         </dependency>
 
         <dependency>
